After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 760751 - Crash in JHBuild prefix on *BSD because iso_639.xml cannot be found
Crash in JHBuild prefix on *BSD because iso_639.xml cannot be found
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.19.x
Other FreeBSD
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-01-17 19:41 UTC by Ting-Wei Lan
Modified: 2016-01-27 10:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Try more prefixes to find iso-codes on *BSD (1.20 KB, patch)
2016-01-17 19:43 UTC, Ting-Wei Lan
none Details | Review

Description Ting-Wei Lan 2016-01-17 19:41:37 UTC
When gnome-software is installed in JHBuild prefix, it cannot find files from iso-codes in DATADIR/xml/iso-codes. It fallbacks to /usr/share/xml/iso-codes in src/gs-language.c, function gs_language_populate, but this doesn't work on *BSD because packages are installed in different prefixes. I will attach a patch to add more prefixes.
Comment 1 Ting-Wei Lan 2016-01-17 19:43:53 UTC
Created attachment 319225 [details] [review]
Try more prefixes to find iso-codes on *BSD
Comment 2 Richard Hughes 2016-01-27 10:51:10 UTC
Comment on attachment 319225 [details] [review]
Try more prefixes to find iso-codes on *BSD

Pushed to master, thanks.