Try more prefixes to find iso-codes on *BSD

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=760751
Signed-off-by: Richard Hughes <richard@hughsie.com>